clusters/akslab2/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tdemo-gateway
  namespace: default
spec:
  routes:
    - conditions:
      - prefix: /
      services: 
        - name: tdemo-gateway
          port: 80
  virtualhost:
    fqdn: tdemo.akslab2a.tap.fynesy.com
    tls:
      secretName: app-tls-cert
